--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
+    implementation "androidx.core:core-ktx:1.2.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifeCycleExtensionVersion"
 
