--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 def lifeCycleExtensionVersion = '1.1.1'
+def lifecycle_version = "2.1.0"
 def retrofitVersion = '2.3.0'
 def rxJavaVersion = '2.1.1'
 def daggerVersion = '2.14.1'
@@ -56,6 +57,7 @@ dependencies {
     implementation 'com.github.razir.progressbutton:progressbutton:2.0.1'
 
     implementation "android.arch.lifecycle:extensions:$lifeCycleExtensionVersion"
+    implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
 
     //Networking dependencies
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -63,6 +65,11 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+
+    //kotlin Coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     //DI dependencies
     implementation "com.google.dagger:dagger:$daggerVersion"
